package org.word.editor.api;

/**
 *
 * @author Jagermeister
 */
public interface WordFilter 
{

    /**
     *
     * @param s
     * @return
     */
    String process(String s);
}
